# ZKAstro

./: .gitignore  .replit  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_NOW.md  ENV_VARIABLES.md  FARCASTER_AUTH_IMPLEMENTATION.md  FARCASTER_AUTH_ISSUE.md  FARCASTER_MINIAPP.md  FARCASTER_MINIAPP_VS_FRAME.md  PRE_DEPLOYMENT_CHECKLIST.md  QUICK_DEPLOY.md  QUICK_START_STYLUS.md  README.md  STYLUS_BRANCH_README.md  STYLUS_MIGRATION_GUIDE.md  VERCEL_DEPLOYMENT.md  design_guidelines.md  migrate-user-charts.ts  package-lock.json  package.json  railway.json  render.yaml  replit.md  test-zk-verification.ts  vercel.json
api/: index.ts
attached_assets/: Pasted-Copy-paste-this-entire-brief-into-Replit-or-any-codegen-agent-as-the-single-source-of-truth-Build-1760706287487_1760706287487.txt
client/: index.html
client/src/: App.tsx  index.css  main.tsx
contracts/: AgentFactory.sol  AgentReputation.sol  AstrologyAgent.sol  Cargo.toml  ChartRegistry.rs  ChartRegistry.sol  README.md  deploy-contracts.ts  deploy-farcaster-stylus.ts  deploy-stylus.ts  stylus-config.json
contracts/src/: farcaster_main.rs  farcaster_predictions.rs  lib.rs  main.rs  poseidon.rs
lib/agents/: agentA.ts  agentB.ts  llm.ts  (+2 more)
scripts/: check-arbitrum-setup.ts  create-farcaster-tables.ts  deploy-agent-factory.ts  deploy-agents.ts  deploy-arbitrum-solidity.ts  deploy-blockchain.ts  deploy-game-agents.ts  test-farcaster-ai.ts  test-farcaster-stylus-e2e.ts
server/: admin-routes.ts  agent-creation.ts  farcaster-routes.ts  index.ts  replitAuth.ts  routes.ts  seed.ts  storage.ts
shared/: schema.ts
(+23 files in other folders)
