[package]
name = "chart-registry-stylus"
version = "0.1.0"
edition = "2021"

[dependencies]
stylus-sdk = "0.5.0"
alloy-primitives = "0.7"
alloy-sol-types = "0.7"

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"

[features]
export-abi = ["stylus-sdk/export-abi"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "z"

